2003-09-09  Jeff Johnston  <jjohnstn@redhat.com>

        * ia64-tdep.c (ia64_sigtramp_frame_init_saved_regs):
        Fix typo for high range of floating registers.

2003-09-08  Adam Fedor  <fedor@gnu.org>

	* linespec.c (is_objc_method_format): New function
	(decode_line_1, locate_first_half): Use it.
	
2003-09-08  Andrew Cagney  <cagney@redhat.com>

	* dwarf2-frame.c (enum dwarf2_reg_rule): New, replace anonymous
	enum.  Add REG_UNSPECIFIED, rename REG_UNSAVED to REG_UNDEFINED
	and REG_UNMODIFIED to REG_SAME_VALUE.
	(execute_cfa_program): Update.
	(dwarf2_frame_cache): Update.  Initialize table to
	REG_UNSPECIFIED, complain if CFI fails to specify a register's
	location.
	(dwarf2_frame_prev_register): Update.  Handle REG_UNSPECIFIED.

2003-09-08  Daniel Jacobowitz  <drow@mvista.com>

	* frame.c (deprecated_safe_get_selected_frame): New function.
	* frame.h (deprecated_safe_get_selected_frame): Add prototype.
	* findvar.c (read_var_value): Call it.

2003-09-02  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in: Bump to version 5.3.91.

2003-08-27  Michael Chastain  <mec@shout.net>

	* config/djgpp/fnchange.lst: Add gdb/testsuite/gdb.mi/mi2-var-*.

2003-08-27  Jeff Johnston  <jjohnstn@redhat.com>

	Sync ia64-tdep.c with mainline.
	
	2003-08-26  Jeff Johnston  <jjohnstn@redhat.com>
	* ia64-tdep.c (examine_prologue): Only stop at predicated insns if
	we are frameless or the return address register is already known. 

	2003-08-26  Jeff Johnston  <jjohnstn@redhat.com>
	* ia64-tdep.c (ia64_convert_from_func_addr): New function.
	(ia64_gdbarch_init): Call set_gdbarch_convert_from_func_addr(). 

	2003-08-25  Jeff Johnston  <jjohnstn@redhat.com>
	* ia64-tdep.c (pseudo_regs): New enum that lists gr32-gr127, p0-p63, 
	bof, and nat0-nat127 as pseudo-registers.
	(ia64_frame_cache): New struct used to cache frame info.
	(ia64_register_reggroup_p): New routine used to override default
	register grouping so registers without names are still saved and 
	restored.