@@ -1,3 +1,8 @@
+2003-09-11  Daniel Jacobowitz  <drow@mvista.com>
+
+	* dwarf2loc.c (dwarf2_loc_desc_needs_frame): Variables in a
+	register do need a frame.
+
 2003-09-09  Jeff Johnston  <jjohnstn@redhat.com>
 
         * ia64-tdep.c (ia64_sigtramp_frame_init_saved_regs):
